[gd_scene load_steps=6 format=3 uid="uid://b8n6i7776pp52"]

[ext_resource type="PackedScene" uid="uid://b6xe84tt1m3gk" path="res://Scenes/Interfaces/task_display.tscn" id="1_ajksy"]
[ext_resource type="Script" path="res://Scenes/PCDisplays/work_frame_display.gd" id="1_dwfmf"]
[ext_resource type="PackedScene" uid="uid://07rrs37v4poh" path="res://Scenes/BaseInterfaces/select_dropdown.tscn" id="2_m1g5f"]
[ext_resource type="PackedScene" uid="uid://bifk7f7ksqfe4" path="res://Scenes/StaticDisplays/inventory_display.tscn" id="4_n3rv8"]
[ext_resource type="PackedScene" uid="uid://ciejxium0crvf" path="res://Scenes/Interfaces/task_edit.tscn" id="5_xqd5u"]

[node name="WorkFrameDisplay" type="Control" node_paths=PackedStringArray("ex_task_display", "ex_task_edit", "ex_av_task_list", "ex_cur_task_list", "ex_subframe_list", "ex_inv_disp")]
layout_mode = 3
anchor_right = 0.75
anchor_bottom = 1.0
offset_right = -6.10352e-05
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dwfmf")
ex_task_display = NodePath("Task Display")
ex_task_edit = NodePath("Task Edit")
ex_av_task_list = NodePath("Control/ATL")
ex_cur_task_list = NodePath("Control/CTL")
ex_subframe_list = NodePath("Control/Subframe List")
ex_inv_disp = NodePath("Control/InventoryDisplay")

[node name="Control" type="Control" parent="."]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -6.10352e-05
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.824582, 0, 0.417989, 1)

[node name="ATL" parent="Control" instance=ExtResource("2_m1g5f")]
layout_mode = 1
anchor_left = 0.03
anchor_top = 0.351111
anchor_right = 0.933333
anchor_bottom = 0.631111
offset_top = -3.05176e-05
offset_right = 0.0
offset_bottom = 0.0
metadata/_edit_use_anchors_ = true

[node name="CTL" parent="Control" instance=ExtResource("2_m1g5f")]
layout_mode = 1
anchor_left = 0.0422222
anchor_top = 0.677778
anchor_right = 0.941111
anchor_bottom = 0.968889
offset_right = 0.0
offset_bottom = 0.0
metadata/_edit_use_anchors_ = true

[node name="Subframe List" parent="Control" instance=ExtResource("2_m1g5f")]
layout_mode = 1
anchor_left = 0.03
anchor_top = 0.193333
anchor_right = 0.945556
anchor_bottom = 0.312222
offset_right = 0.0
offset_bottom = 0.0
metadata/_edit_use_anchors_ = true

[node name="InventoryDisplay" parent="Control" instance=ExtResource("4_n3rv8")]
layout_mode = 1
anchor_left = 0.0277778
anchor_top = 0.0333333
anchor_right = 0.95
anchor_bottom = 0.146667

[node name="Task Display" parent="." instance=ExtResource("1_ajksy")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
offset_right = 0.0

[node name="Task Edit" parent="." instance=ExtResource("5_xqd5u")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
offset_right = 6.10352e-05

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="ButtonPressedSignal" from="Control/ATL" to="." method="load_task" binds= [false]]
[connection signal="ButtonPressedSignal" from="Control/CTL" to="." method="load_task" binds= [true]]
[connection signal="DataIsChangedSignal" from="Task Display" to="." method="update_display"]
[connection signal="EditTaskSignal" from="Task Display" to="." method="edit_task"]
[connection signal="RemoveTaskSignal" from="Task Display" to="." method="remove_current_task"]
[connection signal="DataIsChangedSignal" from="Task Edit" to="." method="update_display"]
[connection signal="ExitEditSignal" from="Task Edit" to="." method="exit_edit_task"]
